--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+        - Add `--host' argument(#6)(Kueppo Tcheukam)
 
 0.003     2017-10-13 18:15:26+02:00 Europe/Berlin
         - rerelease previous version because it was broken
