--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 {{$NEXT}}
-        - doc fixes
+        - Improve documentation
         - Add `--host' argument(#6)(Kueppo Tcheukam)
 
 0.004     2018-08-16 00:58:14+01:00 Europe/London
